Localization story board file added for all languages.

--- a/LDA/LDA/zh-Hans.lproj/Main.strings
+++ b/LDA/LDA/zh-Hans.lproj/Main.strings
@@ -1,39 +1,45 @@
 
 /* Class = "UIBarButtonItem"; title = "Cancel"; ObjectID = "1Dv-ur-7Ck"; */
-"1Dv-ur-7Ck.title" = "Annuler";
+"1Dv-ur-7Ck.title" = "取消";
 
 /* Class = "UITextField"; placeholder = "Email"; ObjectID = "4q0-VV-G1z"; */
-"4q0-VV-G1z.placeholder" = "Email";
+"4q0-VV-G1z.placeholder" = "电子邮件";
 
 /* Class = "UISegmentedControl"; A6e-sV-tkY.segmentTitles[0] = "One-way/Round"; ObjectID = "A6e-sV-tkY"; */
-"A6e-sV-tkY.segmentTitles[0]" = "Unidirectionnel / Rond";
+"A6e-sV-tkY.segmentTitles[0]" = "单向/圆";
 
 /* Class = "UISegmentedControl"; A6e-sV-tkY.segmentTitles[1] = "MultipleStop"; ObjectID = "A6e-sV-tkY"; */
-"A6e-sV-tkY.segmentTitles[1]" = "Arrêt multiple";
+"A6e-sV-tkY.segmentTitles[1]" = "多站";
 
 /* Class = "UITextField"; placeholder = "Alternative Phone"; ObjectID = "Bd3-Yz-8XA"; */
-"Bd3-Yz-8XA.placeholder" = "Téléphone alternatif";
+"Bd3-Yz-8XA.placeholder" = "替代电话";
 
 /* Class = "UITextField"; placeholder = "Phone"; ObjectID = "HuY-G1-Vwr"; */
-"HuY-G1-Vwr.placeholder" = "Téléphone";
+"HuY-G1-Vwr.placeholder" = "电话";
+
+/* Class = "UILabel"; text = "Label"; ObjectID = "WOf-XM-9Mh"; */
+"WOf-XM-9Mh.text" = "Label";
+
+/* Class = "UIBarButtonItem"; title = "LANGUAGE"; ObjectID = "bV3-ER-dxb"; */
+"bV3-ER-dxb.title" = "LANGUAGE";
 
 /* Class = "UIBarButtonItem"; title = "Done"; ObjectID = "feV-T9-Osa"; */
-"feV-T9-Osa.title" = "Terminé";
+"feV-T9-Osa.title" = "完成";
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "gp0-Zp-tNb"; */
 "gp0-Zp-tNb.text" = "Label";
 
 /* Class = "UITextField"; placeholder = "Last Name"; ObjectID = "hmV-FZ-M4o"; */
-"hmV-FZ-M4o.placeholder" = "Nom de famille";
+"hmV-FZ-M4o.placeholder" = "姓";
 
 /* Class = "UITextField"; placeholder = "First Name"; ObjectID = "iGL-OJ-ytm"; */
-"iGL-OJ-ytm.placeholder" = "Prénom";
+"iGL-OJ-ytm.placeholder" = "名字";
 
 /* Class = "UITextField"; placeholder = "Preferred Flight"; ObjectID = "qnS-u3-r0F"; */
-"qnS-u3-r0F.placeholder" = "Vol préféré";
+"qnS-u3-r0F.placeholder" = "首选航班";
 
 /* Class = "UIButton"; normalTitle = "SUBMIT"; ObjectID = "s4q-ND-VdO"; */
-"s4q-ND-VdO.normalTitle" = "SOUMETTRE";
+"s4q-ND-VdO.normalTitle" = "提交";
 
 /* Class = "UILabel"; text = "I AGREE TO THE USER AGREEMENT TERMS."; ObjectID = "tTY-7z-Bn5"; */
-"tTY-7z-Bn5.text" = "I AGREE TO THE USER AGREEMENT TERMS.";
+"tTY-7z-Bn5.text" = "我同意用户协议条款。";
