String change of terms and conditions label.

--- a/LDA/LDA/fr.lproj/Main.strings
+++ b/LDA/LDA/fr.lproj/Main.strings
@@ -36,4 +36,4 @@
 "s4q-ND-VdO.normalTitle" = "SOUMETTRE";
 
 /* Class = "UILabel"; text = "I AGREE TO THE USER AGREEMENT TERMS."; ObjectID = "tTY-7z-Bn5"; */
-"tTY-7z-Bn5.text" = "I AGREE TO THE USER AGREEMENT TERMS.";
+"tTY-7z-Bn5.text" = "J'ACCEPTE LES TERMES DE L'ACCORD UTILISATEUR.";
