--- a/LDA/zh-Hans.lproj/Localizable.strings
+++ b/LDA/zh-Hans.lproj/Localizable.strings
@@ -22,8 +22,12 @@
 
 /*Validation Messages*/
 
+"OK" = "好";
+"Warning" = "警告";
 "Please enter first name" = "请输入名字";
 "Please enter last name" = "请输入姓氏";
 "Please enter email id" = "请输入电子邮件ID";
 "Please enter valid email id" = "请输入有效的电子邮件ID";
 "Please enter phone number" = "请输入电话号码";
+"Please accept Terms and Conditions" = "请接受条款和条件";
+"Please enter valid Source and Destination" = "请输入有效的来源和目的地";
