--- a/LDA/ar.lproj/Localizable.strings
+++ b/LDA/ar.lproj/Localizable.strings
@@ -22,8 +22,12 @@
 
 /*Validation Messages*/
 
+"OK" = "حسنا";
+"Warning" = "تحذير";
 "Please enter first name" = "يرجى إدخال الاسم الأول";
 "Please enter last name" = "يرجى إدخال الاسم الأخير";
 "Please enter email id" = "الرجاء إدخال معرف البريد الإلكتروني";
 "Please enter valid email id" = "الرجاء إدخال معرف البريد الإلكتروني الصحيح";
 "Please enter phone number" = "يرجى إدخال رقم الهاتف";
+"Please accept Terms and Conditions" = "يرجى قبول الشروط والأحكام";
+"Please enter valid Source and Destination" = "الرجاء إدخال المصدر والوجهة الصحيحة";
