--- a/LDA/en.lproj/Localizable.strings
+++ b/LDA/en.lproj/Localizable.strings
@@ -32,3 +32,5 @@
 "Please enter phone number" = "Please enter phone number";
 "Please accept Terms and Conditions" = "Please accept Terms and Conditions";
 "Please enter valid Source and Destination" = "Please enter valid Source and Destination";
+
+"Language changes will take effect after restarting the application" = "Language changes will take effect after restarting the application";
