--- a/LDA/fr.lproj/Localizable.strings
+++ b/LDA/fr.lproj/Localizable.strings
@@ -31,3 +31,5 @@
 "Please enter phone number" = "S'il vous plaît entrer le numéro de téléphone";
 "Please accept Terms and Conditions" = "Veuillez accepter les termes et conditions";
 "Please enter valid Source and Destination" = "Veuillez entrer une source et une destination valides";
+
+"Language changes will take effect after restarting the application" = "Les changements de langue prendront effet après le redémarrage de l'application";
