--- a/LDA/ru.lproj/Localizable.strings
+++ b/LDA/ru.lproj/Localizable.strings
@@ -31,3 +31,5 @@
 "Please enter phone number" = "Введите номер телефона";
 "Please accept Terms and Conditions" = "Примите условия";
 "Please enter valid Source and Destination" = "Укажите действительный источник и местонахождение";
+
+"Language changes will take effect after restarting the application" = "Изменения языка вступят в силу после перезапуска приложения";
