--- a/LDA/ar.lproj/Localizable.strings
+++ b/LDA/ar.lproj/Localizable.strings
@@ -6,6 +6,11 @@
   Copyright © 2018 lda. All rights reserved.
 */
 
+//Trip Type
+
+"One Way" = "اتجاه واحد";
+"Return" = "إرجاع";
+
 //Trip Classes
 
 "Economy" = "اقتصاد";
