--- a/LDA/de.lproj/Localizable.strings
+++ b/LDA/de.lproj/Localizable.strings
@@ -6,6 +6,11 @@
   Copyright © 2018 lda. All rights reserved.
 */
 
+//Trip Type
+
+"One Way" = "Einweg";
+"Return" = "Rückkehr";
+
 //Trip Classes
 
 "Economy" = "Wirtschaft";
