Localization text change.

--- a/LDA/Base.lproj/Localizable.strings
+++ b/LDA/Base.lproj/Localizable.strings
@@ -18,6 +18,7 @@
 "First Class" = "First Class";
 "Premium Economy" = "Premium Economy";
 
+"Total" = "Total";
 "TRIPTYPEHEADING" = "TRIP TYPE";
 "CLASSHEADING" = "CLASS";
 "DEPARTHEADING" = "DEPART";
