--- a/LDA/ar.lproj/Localizable.strings
+++ b/LDA/ar.lproj/Localizable.strings
@@ -18,6 +18,7 @@
 "First Class" = "الصف الأول";
 "Premium Economy" = "اقتصاد مميز";
 
+"Total" = "مجموع";
 "TRIPTYPEHEADING" = "نوع الرحلة";
 "CLASSHEADING" = "صف دراسي";
 "DEPARTHEADING" = "تغادر";
