--- a/LDA/de.lproj/Localizable.strings
+++ b/LDA/de.lproj/Localizable.strings
@@ -17,7 +17,7 @@
 "Business" = "Geschäft";
 "First Class" = "Erste Klasse";
 "Premium Economy" = "Premium-Wirtschaft";
-
+"Total" = "Gesamt";
 "TRIPTYPEHEADING" = "Reiseart";
 "CLASSHEADING" = "KLASSE";
 "DEPARTHEADING" = "ABFAHREN";
