--- a/LDA/es.lproj/Localizable.strings
+++ b/LDA/es.lproj/Localizable.strings
@@ -18,6 +18,7 @@
 "First Class" = "Primera clase";
 "Premium Economy" = "Economia Premium";
 
+"Total" = "Total";
 "TRIPTYPEHEADING" = "TRIP TYPE";
 "CLASSHEADING" = "CLASE";
 "DEPARTHEADING" = "SALIR";
