--- a/LDA/fr.lproj/Localizable.strings
+++ b/LDA/fr.lproj/Localizable.strings
@@ -17,6 +17,7 @@
 "First Class" = "Première classe";
 "Premium Economy" = "Economie de la meilleure qualité";
 
+"Total" = "Total";
 "TRIPTYPEHEADING" = "TYPE DE VOYAGE";
 "CLASSHEADING" = "CLASSE";
 "DEPARTHEADING" = "PARTIR";
