--- a/LDA/ru.lproj/Localizable.strings
+++ b/LDA/ru.lproj/Localizable.strings
@@ -18,6 +18,7 @@
 "First Class" = "Первый класс";
 "Premium Economy" = "Премиум экономика";
 
+"Total" = "Всего";
 "TRIPTYPEHEADING" = "ТИП ТИПА";
 "CLASSHEADING" = "КЛАСС";
 "DEPARTHEADING" = "отходить";
