--- a/LDA/zh-Hans.lproj/Localizable.strings
+++ b/LDA/zh-Hans.lproj/Localizable.strings
@@ -18,6 +18,7 @@
 "First Class" = "头等舱";
 "Premium Economy" = "豪华经济舱";
 
+"Total" = "总";
 "TRIPTYPEHEADING" = "旅行类型";
 "CLASSHEADING" = "类";
 "DEPARTHEADING" = "离开";
