Localization implemented in Search page.

--- a/LDA/ar.lproj/Localizable.strings
+++ b/LDA/ar.lproj/Localizable.strings
@@ -47,3 +47,8 @@
 "Please enter valid Source and Destination" = "الرجاء إدخال المصدر والوجهة الصحيحة";
 
 "Language changes will take effect after restarting the application" = "ستدخل تغييرات اللغة حيز التنفيذ بعد إعادة تشغيل التطبيق";
+
+/*Search*/
+
+"From where?" = "من اين؟";
+"To where?" = "إلى أين؟";
