--- a/LDA/de.lproj/Localizable.strings
+++ b/LDA/de.lproj/Localizable.strings
@@ -46,3 +46,8 @@
 "Please enter valid Source and Destination" = "Bitte geben Sie gültige Quelle und Ziel ein";
 
 "Language changes will take effect after restarting the application" = "Sprachänderungen werden nach dem Neustart der Anwendung wirksam";
+
+/*Search*/
+
+"From where?" = "Wovon?";
+"To where?" = "Wohin?";
