--- a/LDA/LDA/ar.lproj/Main.strings
+++ b/LDA/LDA/ar.lproj/Main.strings
@@ -3,7 +3,7 @@
 "1Dv-ur-7Ck.title" = "إلغاء";
 
 /* Class = "UITextField"; placeholder = "Email"; ObjectID = "4q0-VV-G1z"; */
-"4q0-VV-G1z.placeholder" = "البريد الإلكتروني";
+"4q0-VV-G1z.placeholder" = "عنوان البريد الاليكتروني";
 
 /* Class = "UISegmentedControl"; A6e-sV-tkY.segmentTitles[0] = "One-way/Round"; ObjectID = "A6e-sV-tkY"; */
 "A6e-sV-tkY.segmentTitles[0]" = "في اتجاه واحد/أحادي الاتجاه";
@@ -30,7 +30,7 @@
 "gp0-Zp-tNb.text" = "Label";
 
 /* Class = "UITextField"; placeholder = "Last Name"; ObjectID = "hmV-FZ-M4o"; */
-"hmV-FZ-M4o.placeholder" = "الكنية";
+"hmV-FZ-M4o.placeholder" = "الاسم الاخير"
 
 /* Class = "UITextField"; placeholder = "First Name"; ObjectID = "iGL-OJ-ytm"; */
 "iGL-OJ-ytm.placeholder" = "الاسم الاول";
@@ -39,7 +39,7 @@
 "qnS-u3-r0F.placeholder" = "رحلة المفضل";
 
 /* Class = "UIButton"; normalTitle = "SUBMIT"; ObjectID = "s4q-ND-VdO"; */
-"s4q-ND-VdO.normalTitle" = "خضع";
+"s4q-ND-VdO.normalTitle" = "التقديم";
 
 /* Class = "UILabel"; text = "I AGREE TO THE USER AGREEMENT TERMS."; ObjectID = "tTY-7z-Bn5"; */
-"tTY-7z-Bn5.text" = "أوافق على شروط اتفاقية المستخدم.";
+"tTY-7z-Bn5.text" = "أوافق علي شروط تعاقد المستخدم";
