--- a/LDA/ar.lproj/Localizable.strings
+++ b/LDA/ar.lproj/Localizable.strings
@@ -18,7 +18,7 @@
 "Economy" = "درجة سياحية";
 "Business" = "درجة رجال الاعمال";
 "First Class" = "درجة أولي";
-"Premium Economy" = "درجة سياحية معززة";
+"Premium Economy" = "درجة سياحية ممتازة";
 
 "Total" = "مجموع";
 "TRIPTYPEHEADING" = "نوع الرحلة";
