Arabic keyword issue in Passenger detail page implemented.

--- a/LDA/ar.lproj/Localizable.strings
+++ b/LDA/ar.lproj/Localizable.strings
@@ -54,3 +54,13 @@
 
 "From where?" = "من اين؟";
 "To where?" = "إلى أين؟";
+
+/*Storyboard Word - Special for arabic */
+"First Name" = "الاسم الاول";
+"Last Name" = "الاسم الاخير";
+"Email" = "عنوان البريد الاليكتروني";
+"Phone" = "هاتف";
+"Alternative Phone" = "هاتف بديل";
+"Preferred Flight" = "رحلة المفضلة";
+"Submit" = "التقديم";
+"UserAgreement" = "أوافق علي شروط تعاقد المستخدم";
