--- a/LDA/de.lproj/Localizable.strings
+++ b/LDA/de.lproj/Localizable.strings
@@ -52,3 +52,4 @@
 "From where?" = "Wovon?";
 "To where?" = "Wohin?";
 "Search" = "Suche";
+"SourceAndDestSame" = "Die Quelle und das Ziel können nicht identisch sein";
