--- a/LDA/en.lproj/Localizable.strings
+++ b/LDA/en.lproj/Localizable.strings
@@ -55,3 +55,4 @@
 "From where?" = "From where?";
 "To where?" = "To where?";
 "Search" = "Search";
+"SourceAndDestSame" = "The source and destination can not be alike";
