--- a/LDA/ar.lproj/Localizable.strings
+++ b/LDA/ar.lproj/Localizable.strings
@@ -77,3 +77,7 @@
 "Done" = "حسنا";
 "Cancel" = "إلغاء";
 
+/*Passenger Details*/
+
+"Success" = "نجاح";
+"SubmissionSuccessMessage" = "تم تقديم طلب رحلتك بنجاح . سيتواصل معك الوكيل لمناقشة الخيارات معك. مع جزيل الشكر.";
