--- a/LDA/fr.lproj/Localizable.strings
+++ b/LDA/fr.lproj/Localizable.strings
@@ -53,3 +53,8 @@
 "To where?" = "Jusqu'où?";
 "Search" = "Chercher";
 "SourceAndDestSame" = "La source et la destination ne peuvent pas être semblables";
+
+/*Passenger Details*/
+
+"Success" = "Succès";
+"SubmissionSuccessMessage" = "Votre demande de vol a été envoyée avec succès. L'agent vous contactera pour discuter des options avec vous. Avec gratitude.";
