--- a/LDA/zh-Hans.lproj/Localizable.strings
+++ b/LDA/zh-Hans.lproj/Localizable.strings
@@ -54,3 +54,8 @@
 "To where?" = "去哪里？";
 "Search" = "搜索";
 "SourceAndDestSame" = "源和目的地不可能相似";
+
+/*Passenger Details*/
+
+"Success" = "成功";
+"SubmissionSuccessMessage" = "您的航班请求已成功提交。代理商将与您联系，与您讨论选项。感激。";
