--- a/LDA/ru.lproj/Localizable.strings
+++ b/LDA/ru.lproj/Localizable.strings
@@ -59,3 +59,6 @@
 
 "Success" = "успех";
 "SubmissionSuccessMessage" = "Ваш запрос на рейс был успешно отправлен. Агент свяжется с вами, чтобы обсудить варианты с вами. Благодарно.";
+"Failed" = "Не смогли";
+"SubmissionFailedMessage" = "Не удалось отправить запрос";
+"NetworkNotAvail" = "Сеть недоступна";
